--- a/style.css
+++ b/style.css
@@ -222,6 +222,12 @@ hr {
     width: 100%;
 }
 
+#specialbild3 {
+    box-shadow: none;
+    width: 111%;
+    margin: 3% 0% 3% -6%;
+}
+
 .hrspecial {
     height: 1px;
     width: 100%;
@@ -381,7 +387,6 @@ img {
 #tabelle1 {
     background-color: #015bff40;
     text-align: center;
-  
 }
 
 .bildweite {
@@ -410,6 +415,10 @@ table {
     box-shadow: 5px 5px 5px 0px rgba(154, 166, 175, 0.7);
 }
 
+ol {
+    margin-bottom: 8%;
+}
+
 #close {
     margin: 4% 7% 0% 0%;
     padding: 1%;
@@ -418,6 +427,130 @@ table {
     float: right;
     box-shadow: 2px 3px 1px 0px rgba(154, 166, 175, 0.7);
     color: white;
+}
+
+.tablestyle {
+    /* margin: auto; */
+    width: 295px;
+    max-width: 295px;
+    height: 325px;
+    text-align: center;
+    border-radius: 4px;
+    padding-right: 10px;
+}
+
+.trstyle {
+    border-style: none;
+}
+
+.styletd {
+    border-style: none;
+}
+
+.inputstyle {
+    outline: 0;
+    position: relative;
+    left: 5px;
+    top: 5px;
+    border: 0;
+    color: #495069;
+    background-color: #fff;
+    border-radius: 4px;
+    width: 60px;
+    height: 50px;
+    float: left;
+    margin: 5px;
+    font-size: 20px;
+    box-shadow: 0 4px rgba(0, 0, 0, 0.2);
+    margin-bottom: 15px;
+}
+
+.inputstyle:hover {
+    border: 0 solid #000;
+    color: #495069;
+    background-color: #fff;
+    border-radius: 4px;
+    width: 60px;
+    height: 50px;
+    float: left;
+    margin: 5px;
+    font-size: 20px;
+    box-shadow: 0 4px #b0d2cf;
+}
+
+.inputstyle:active {
+    top: 4px;
+    border: 0 solid #000;
+    color: #495069;
+    background-color: #fff;
+    border-radius: 4px;
+    width: 60px;
+    height: 50px;
+    float: left;
+    margin: 5px;
+    font-size: 20px;
+    box-shadow: none;
+}
+
+#display {
+    width: 97%;
+    /* max-width: 270px; */
+    font-size: 26px;
+    text-align: right;
+    background-color: #143e6a;
+    /* float: left; */
+}
+
+#display:hover {
+    font-size: 26px;
+    text-align: right;
+    box-shadow: 0 4px rgba(0, 0, 0, 0.2);
+}
+
+#display:active {
+    top: 5px;
+    font-size: 26px;
+    text-align: right;
+    box-shadow: 0 4px rgba(0, 0, 0, 0.2);
+}
+
+.operator {
+    background-color: #cee9ea;
+    position: relative;
+}
+
+.operator:hover {
+    background-color: #cee9ea;
+    box-shadow: 0 4px #b0d2cf;
+}
+
+.operator:active {
+    top: 4px;
+    box-shadow: none;
+}
+
+#clear {
+    float: left;
+    position: relative;
+    display: block;
+    background-color: #ff9fa8;
+}
+
+#clear:hover {
+    float: left;
+    display: block;
+    background-color: #F297A0;
+    margin-bottom: 15px;
+    box-shadow: 0 4px #CC7F86;
+}
+
+#clear:active {
+    float: left;
+    top: 4px;
+    display: block;
+    background-color: #F297A0;
+    margin-bottom: 15px;
+    box-shadow: none;
 }
 
 @media screen and (max-width: 769px) {
